--- a/data understanding/career_prediction.ipynb
+++ b/data understanding/career_prediction.ipynb
@@ -615,12 +615,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9018c22e",
+   "metadata": {},
+   "source": [
+    "removed index column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3826cb0f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = data.drop(columns=['Unnamed: 0'])\n"
+   ]
   }
  ],
  "metadata": {
